--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="./images/logo.png" type="image/png" />
     <title>Luka's Quizzes</title>
   </head>
   <body>
+    <header>
+      <div class="center">
+        <a href="index.html"
+          ><img src="./images/logo.png" alt="Page Logo" />
+          <h1>luka's quizzes</h1></a
+        >
+        <div class="authorization">
+          <button class="primary_button_link">login</button>
+          <button class="primary_button_link">sign up</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="center">
+        <div class="content">
+          <h2>repetition Makes perfect</h2>
+          <div class="content__links">
+            <a href="#" class="primary_button_link">start quiz</a>
+            <a href="#" class="secondary_button_link">create test</a>
+          </div>
+        </div>
+        <div class="img-container">
+          <img
+            src="./images/multiple-choices.png"
+            alt="Image of multiple choices test"
+          />
+        </div>
+      </section>
+    </main>
+
+    <footer class="center">
+      <img src="./images/logo.png" alt="Image of page logo" />
+      <a href="#">contact</a>
+    </footer>
+    <div class="bottom-border"></div>
     <script src="./js/index.js"></script>
   </body>
 </html>
