--- a/index.html
+++ b/index.html
@@ -13,13 +13,61 @@
       <div class="center">
         <a href="index.html"
           ><img src="./images/logo.png" alt="Page Logo" />
-          <h1>luka's quizzes</h1></a
+          <h1>luka's Quizzes</h1></a
         >
         <div class="authorization">
-          <button class="primary_button_link">login</button>
-          <button class="primary_button_link">sign up</button>
+          <button class="primary_button_link" data_login_btn>login</button>
+          <button class="primary_button_link" data_sign_up_btn>sign up</button>
         </div>
       </div>
+      <dialog data_modal>
+        <form action="" data_sign_up_form class="inactive">
+          <legend>sign up</legend>
+          <input
+            class="primary_input_field"
+            type="text"
+            placeholder="enter Username"
+          />
+          <input
+            class="primary_input_field"
+            type="password"
+            placeholder="enter Password"
+          />
+          <input
+            class="primary_input_field"
+            type="password"
+            placeholder="repeat Password"
+          />
+          <div class="form__btns">
+            <button class="primary_button_link">sign Up</button>
+            <div>
+              <p>already Have an account?</p>
+              <button data_to_login_btn>login</button>
+            </div>
+          </div>
+        </form>
+        <form action="" data_login_form class="inactive">
+          <legend>login</legend>
+          <input
+            class="primary_input_field"
+            type="text"
+            placeholder="enter Username"
+          />
+          <input
+            class="primary_input_field"
+            type="password"
+            placeholder="enter Password"
+          />
+          <div class="form__btns">
+            <button class="primary_button_link">login</button>
+            <div>
+              <p>no Account?</p>
+              <button data_to_sign_up_btn>sign up</button>
+            </div>
+          </div>
+        </form>
+        <button data_close_modal>&times;</button>
+      </dialog>
     </header>
     <main>
       <section class="center">
@@ -40,7 +88,9 @@
     </main>
 
     <footer class="center">
-      <img src="./images/logo.png" alt="Image of page logo" />
+      <a href="./index.html">
+        <img src="./images/logo.png" alt="Image of page logo" />
+      </a>
       <a href="#">contact</a>
     </footer>
     <div class="bottom-border"></div>
