feat: add logout button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               <li><a href="#">profile</a></li>
               <li><a href="#">history</a></li>
               <li><a href="#">my quizzes</a></li>
+              <li><button data-logout-btn>logout</button></li>
             </ul>
           </div>
         </div>
