feat: add logout modal

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
           </div>
         </div>
       </div>
+      <dialog data-logout-dialog>
+        <div class="wrapper">
+          <h2>Are you sure you want to log out?</h2>
+          <button data-confirm-logout class="primary_button_link">yes</button>
+          <button data-cancel-logout class="secondary_button_link">no</button>
+        </div>
+      </dialog>
       <dialog data-authorization-modal>
         <form data-sign-up-form class="inactive">
           <label for="sign_up_username">enter username</label>
