--- a/pages/history.html
+++ b/pages/history.html
@@ -14,7 +14,7 @@
       <div class="center">
         <h1>
           <a href="../index.html"
-            ><img src="../images/logo.png" alt="Page Logo"
+            ><img src="../images/logo.png" alt="Luka's Quizzes"
           /></a>
           <a href="../index.html">luka's Quizzes</a>
         </h1>
@@ -120,7 +120,7 @@
       <ul class="center">
         <li class="primary">
           <a href="../index.html">
-            <img src="../images/logo.png" alt="Image of page logo" />
+            <img src="../images/logo.png" alt="Luka's Quizzes" />
           </a>
         </li>
         <li>
