fix: copy message visibility on load

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -170,7 +170,7 @@
       <div class="bottom-border"></div>
       <div class="overlay inactive opaque"></div>
       <div data-spinner class="spinner inactive"></div>
-      <div class="copy-message" data-copied-hint>
+      <div class="copy-message" data-copied-hint style="opacity: 0">
         <p>Copied to clipboard!</p>
       </div>
     </footer>
