--- a/pages/history.html
+++ b/pages/history.html
@@ -154,7 +154,7 @@
       <div class="bottom-border"></div>
       <div class="overlay inactive opaque"></div>
       <div data-spinner class="spinner"></div>
-      <div class="copy-message" data-copied-hint>
+      <div class="copy-message" data-copied-hint style="opacity: 0">
         <p>Copied to clipboard!</p>
       </div>
     </footer>
