feat: add gap between quizzes

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -63,7 +63,9 @@
           </li>
           <li data-index="1" data-question>
             <div class="question">
-              <h2>How long does it take for light to make it to earth?</h2>
+              <h2>
+                How long does it take for light to travel from the Sun to Earth?
+              </h2>
             </div>
             <ul>
               <li><button data-option>1 minute</button></li>
@@ -91,7 +93,7 @@
           </li>
           <li data-index="3" data-question>
             <div class="question">
-              <h2>Who painted the famous painting of Mona Lisa?</h2>
+              <h2>Who painted the famous Mona Lisa?</h2>
               <img src="../images/mona-lisa.png" alt="Mona Lisa painting" />
             </div>
             <ul>
