feat: add semanticity

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="../images/logo.png" type="image/png" />
     <script defer src="../js/index.js"></script>
-    <title>Profile</title>
+    <title>Quiz</title>
   </head>
   <body>
     <header>
@@ -39,7 +39,7 @@
     </header>
     <main class="center">
       <section>
-        <h2 class="inactive" data-score></h2>
+        <h2 class="inactive" data-score>Your score is 4/5 (80%)</h2>
         <ul class="inactive" data-question-balls>
           <li data-question-ball></li>
           <li data-question-ball></li>
