feat: add method to forms

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </dialog>
       <div data-auth-modal-container class="modal_container inactive">
         <div data-authorization-modal>
-          <form data-sign-up-form class="inactive">
+          <form data-sign-up-form class="inactive" method="get">
             <label for="sign_up_username">enter username</label>
             <label for="sign_up_password">enter password</label>
             <label for="sign_up_repeat_password">repeat password</label>
@@ -80,7 +80,7 @@
               </div>
             </div>
           </form>
-          <form data-login-form class="inactive">
+          <form data-login-form class="inactive" method="get">
             <label for="login_username">enter username</label>
             <label for="login_password"></label>
             <fieldset>
